--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,10 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "0d5d622a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\.venv\\Lib\\site-packages\\pygame\\pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  from pkg_resources import resource_stream, resource_exists\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.13.7)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "#required libraries\n",
     "import numpy as np\n",
@@ -13,12 +30,15 @@
     "import tensorflow as tf\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
-    "import time"
+    "import time\n",
+    "import random\n",
+    "from collections import deque\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "08e17ef7",
    "metadata": {},
    "outputs": [],
@@ -45,7 +65,23 @@
     "\n",
     "TRACK_SAVE_PATH = \"track1.png\"\n",
     "CAR_IMAGE_PATH = \"Track_images/car.png\"\n",
-    "TRACK_IMAGE_PATH = r\"track1.png\""
+    "TRACK_IMAGE_PATH = r\"track1.png\"\n",
+    "\n",
+    "finish_line_rect=pygame.Rect(DEFAULT_START_X+30,DEFAULT_START_Y-20,10,100)\n",
+    "checkpoint_data=[\n",
+    "    (834,520,10,120,0),\n",
+    "    (600,540,10,120,0),\n",
+    "    (110,569,10,120,90),\n",
+    "    (285,483,10,120,0),\n",
+    "    (366,314,10,120,0),\n",
+    "    (355,173,10,120,0),\n",
+    "    (450,109,10,120,0),\n",
+    "    (606,170,10,120,0),\n",
+    "    (818,91,10,120,0),\n",
+    "    (1127,88,10,120,310),\n",
+    "    (1094,270,10,120,0),\n",
+    "    (920,346,10,120,45)\n",
+    "]"
    ]
   },
   {
@@ -60,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "912d2d9f",
    "metadata": {},
    "outputs": [],
@@ -104,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "d0895936",
    "metadata": {},
    "outputs": [],
@@ -144,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "id": "f4346e7c",
    "metadata": {},
    "outputs": [],
@@ -191,231 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "35516690",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_4\"</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1mModel: \"sequential_4\"\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
-       "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
-       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ dense_12 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span> │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_13 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">16</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">528</span> │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_14 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">4</span>)              │            <span style=\"color: #00af00; text-decoration-color: #00af00\">68</span> │\n",
-       "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
-       "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
-       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ dense_12 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │           \u001b[38;5;34m128\u001b[0m │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_13 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m16\u001b[0m)             │           \u001b[38;5;34m528\u001b[0m │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_14 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m4\u001b[0m)              │            \u001b[38;5;34m68\u001b[0m │\n",
-       "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">724</span> (2.83 KB)\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m724\u001b[0m (2.83 KB)\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">724</span> (2.83 KB)\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m724\u001b[0m (2.83 KB)\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Non-trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> (0.00 B)\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m0\u001b[0m (0.00 B)\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "def model():\n",
-    "    \"\"\"Builds a simple feedforward neural network model.\n",
-    "\n",
-    "    Returns:\n",
-    "        model: A Keras Sequential model instance.\n",
-    "    \"\"\"\n",
-    "    model=Sequential(\n",
-    "        [Dense(32,activation='relu',input_shape=(3,)),\n",
-    "         Dense(16,activation='relu'),\n",
-    "         Dense(4,activation='linear')]\n",
-    "    )\n",
-    "    model.compile(optimizer='adam',loss='mse')\n",
-    "    return model\n",
-    "ai_model=model()\n",
-    "ai_model.summary()\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "f5641eac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def model_game_step(action,car,track_image):\n",
-    "    \"\"\"Simulates a single step in the game using the provided action.\n",
-    "\n",
-    "    Args:\n",
-    "        action (int): The action to be taken (0: left, 1: accelerate, 2: right, 3: brake).\n",
-    "        car (Car): The car object.\n",
-    "        track_image (Surface): The surface of the track.\n",
-    "\n",
-    "    Returns:\n",
-    "        tuple: A tuple containing the new state, reward, and done flag.\n",
-    "    \"\"\"\n",
-    "    reward=0.1\n",
-    "    done=False\n",
-    "    \n",
-    "    speed_factor = car.speed / MAX_SPEED\n",
-    "    turn_range = MAX_TURN_ANGLE - MIN_TURN_ANGLE\n",
-    "    dynamic_turn_angle = MAX_TURN_ANGLE - (speed_factor * turn_range)\n",
-    "    if action==0:\n",
-    "        car.angle += dynamic_turn_angle\n",
-    "    elif action==2:\n",
-    "        car.angle -= dynamic_turn_angle\n",
-    "    elif action==1:\n",
-    "        if car.speed < MAX_SPEED:\n",
-    "                car.speed += ACCELERATION\n",
-    "    elif action==3:\n",
-    "        if car.speed > 0:\n",
-    "            car.speed -= BRAKE_FORCE\n",
-    "    if car.speed > 0:\n",
-    "        car.speed -= FRICTION\n",
-    "    if car.speed < 0:\n",
-    "        car.speed += FRICTION\n",
-    "    if abs(car.speed) < FRICTION:\n",
-    "        car.speed = 0\n",
-    "        \n",
-    "    car.move()\n",
-    "    car.draw(track_image)\n",
-    "    \n",
-    "    try:\n",
-    "        CAR_ROAD_COLOR = track_image.get_at((DEFAULT_START_X, DEFAULT_START_Y))[:3]\n",
-    "        pixel_color = track_image.get_at((int(car.x), int(car.y)))[0:3]\n",
-    "        if pixel_color == CAR_ROAD_COLOR:\n",
-    "            done = True\n",
-    "    except IndexError:\n",
-    "        done = True\n",
-    "    if done:\n",
-    "        reward= -100\n",
-    "        return [], reward, done\n",
-    "\n",
-    "    new_state,_=ray_casting(car,track_image)\n",
-    "    return new_state,reward,done\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af0f3dbb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run_ai_simulation():\n",
-    "    \"\"\"Runs the car simulation controlled by an AI model.\n",
-    "        The AI model predicts actions based on the car's sensor data.\n",
-    "        0: turn left\n",
-    "        1: accelerate\n",
-    "        2: turn right\n",
-    "        3: brake\n",
-    "    \"\"\"\n",
-    "    pygame.init()\n",
-    "    screen=pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
-    "    clock=pygame.time.Clock()\n",
-    "    pygame.display.set_caption(\"AI Car Simulation\")\n",
-    "    track_surface=pygame.image.load(TRACK_IMAGE_PATH).convert()\n",
-    "    car=Car(CAR_IMAGE_PATH,DEFAULT_START_X,DEFAULT_START_Y,DEFAULT_START_ANGLE,DEFAULT_START_SPEED)\n",
-    "    font=pygame.font.SysFont(None,22)\n",
-    "    \n",
-    "    running=True\n",
-    "    while running:\n",
-    "        for event in pygame.event.get():\n",
-    "            if event.type==pygame.QUIT:\n",
-    "                running=False\n",
-    "        current_state,ray_endpoints=ray_casting(car,track_surface)\n",
-    "        reshaped_state = np.reshape(current_state, [1, 3])\n",
-    "        q_values = ai_model.predict(reshaped_state, verbose=0)\n",
-    "        action = np.argmax(q_values[0])\n",
-    "        _ ,_ ,done=model_game_step(action,car,track_surface)\n",
-    "        print(f\"State (Sensors): {current_state}\")\n",
-    "        print(f\"Brain Output (Q-Values): {q_values[0]}\")\n",
-    "        print(f\"Chosen Action (0=L, 1=S, 2=R): {action}\")\n",
-    "        print(\"-\" * 20)\n",
-    "        if done:\n",
-    "            text_surface = font.render(\"Car Crashed! Resetting...\", True, (255, 255, 255))\n",
-    "            screen.blit(text_surface, (50, 50))\n",
-    "            pygame.display.update()\n",
-    "            pygame.time.wait(1000)\n",
-    "            car=Car(CAR_IMAGE_PATH,DEFAULT_START_X,DEFAULT_START_Y,DEFAULT_START_ANGLE,DEFAULT_START_SPEED)\n",
-    "        \n",
-    "        screen.blit(track_surface,(0,0))\n",
-    "        car.draw(screen)\n",
-    "        \n",
-    "        text_surface = font.render(f\"Distances: {current_state}\", True, (255, 255, 255))\n",
-    "        screen.blit(text_surface, (50, 80))\n",
-    "        for points in ray_endpoints:\n",
-    "            pygame.draw.line(screen,(0,255,0),(car.x,car.y),points,1)\n",
-    "            \n",
-    "        pygame.display.update()\n",
-    "        clock.tick(1)\n",
-    "    pygame.quit()\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "id": "7e04541e",
    "metadata": {},
    "outputs": [],
@@ -449,7 +261,7 @@
     "\n",
     "    CAR_ROAD_COLOR = track_surface.get_at((start_x, start_y))[:3]\n",
     "\n",
-    "    finish_line_rect=pygame.Rect(start_x+30,start_y-20,10,100)\n",
+    "  \n",
     "\n",
     "    lap_start_time=0\n",
     "    best_lap_time=float('inf')\n",
@@ -461,20 +273,7 @@
     "    \n",
     "    #checkpoints\n",
     "    checkpoints=[]\n",
-    "    checkpoint_data=[\n",
-    "        (834,520,10,120,0),\n",
-    "        (600,540,10,120,0),\n",
-    "        (110,569,10,120,90),\n",
-    "        (285,483,10,120,0),\n",
-    "        (366,314,10,120,0),\n",
-    "        (355,173,10,120,0),\n",
-    "        (450,109,10,120,0),\n",
-    "        (606,170,10,120,0),\n",
-    "        (818,91,10,120,0),\n",
-    "        (1127,88,10,120,310),\n",
-    "        (1094,270,10,120,0),\n",
-    "        (920,346,10,120,45)\n",
-    "    ]\n",
+    "    \n",
     "    for x,y,w,h,a in checkpoint_data:\n",
     "        base_surface=pygame.Surface((w,h),pygame.SRCALPHA)\n",
     "        base_surface.fill((255,0,255,100))\n",
@@ -629,34 +428,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "823c5ef8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "State (Sensors): [34, 156, 28]\n",
-      "Brain Output (Q-Values): [-3.8983077e-02 -1.4073191e+01  4.6750340e+01  3.0004091e+00]\n",
-      "Chosen Action (0=L, 1=S, 2=R): 2\n",
-      "--------------------\n",
-      "State (Sensors): [34, 156, 28]\n",
-      "Brain Output (Q-Values): [-3.8983077e-02 -1.4073191e+01  4.6750340e+01  3.0004091e+00]\n",
-      "Chosen Action (0=L, 1=S, 2=R): 2\n",
-      "--------------------\n",
-      "State (Sensors): [34, 156, 28]\n",
-      "Brain Output (Q-Values): [-3.8983077e-02 -1.4073191e+01  4.6750340e+01  3.0004091e+00]\n",
-      "Chosen Action (0=L, 1=S, 2=R): 2\n",
-      "--------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    #draw_track()\n",
-    "    #run_simulation()\n",
-    "    run_ai_simulation()\n"
+    "    run_simulation()\n"
    ]
   },
   {
